<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PurchaseCompletedActivity">

    <ImageView
        android:id="@+id/purchase_completed_imageview"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/orange_200"
        android:contentDescription="@string/orange_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/purchase_completed_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/purchase_completed_imageview"
        app:layout_constraintEnd_toEndOf="@+id/purchase_completed_imageview"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/purchase_completed_imageview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <TextView
        android:id="@+id/purchase_completed_success_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/successful_purchase"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/purchase_completed_congratulations"
        app:layout_constraintStart_toStartOf="@+id/purchase_completed_congratulations"
        app:layout_constraintTop_toBottomOf="@+id/purchase_completed_congratulations" />

    <TextView
        android:id="@+id/purchase_completed_purchase_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/see_the_purchase_summary"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchase_completed_imageview" />

    <ImageView
        android:id="@+id/purchase_completed_city_image"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_of_the_city"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchase_completed_purchase_summary"
        tools:src="@sample/packages.json/packages/image" />

    <TextView
        android:id="@+id/purchase_completed_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/purchase_completed_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchase_completed_city_image"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@sample/packages.json/packages/city" />

    <TextView
        android:id="@+id/purchase_completed_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/purchase_completed_city"
        app:layout_constraintTop_toBottomOf="@+id/purchase_completed_city"
        tools:text="08/12 - 10/12 of 2017" />

    <TextView
        android:id="@+id/purchase_completed_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/purchase_completed_date"
        app:layout_constraintTop_toBottomOf="@+id/purchase_completed_date"
        tools:text="@sample/packages.json/packages/price" />
</androidx.constraintlayout.widget.ConstraintLayout>