<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PackageListActivity">

    <ImageView
        android:id="@+id/item_package_city_image"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:contentDescription="@string/initial_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@color/purple_200"/>

    <TextView
        android:id="@+id/list_package_specials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/specials"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/item_package_city_image"
        app:layout_constraintEnd_toEndOf="@id/item_package_city_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/item_package_city_image"
        app:layout_constraintTop_toTopOf="@id/item_package_city_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/list_package_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/brazil"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/list_package_specials"
        app:layout_constraintTop_toBottomOf="@+id/list_package_specials" />

    <ListView
        android:id="@+id/list_package_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintTop_toBottomOf="@id/item_package_city_image"
        tools:listitem="@layout/item_package" />

</androidx.constraintlayout.widget.ConstraintLayout>