<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/package_resume_city_image"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/image_of_the_city"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/package_resume_city_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@sample/packages.json/packages/image" />

    <TextView
        android:id="@+id/package_resume_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/package_resume_days"
        app:layout_constraintEnd_toEndOf="@id/package_resume_city_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/package_resume_city_image"
        app:layout_constraintTop_toBottomOf="@id/package_resume_city_image"
        tools:text="@sample/packages.json/packages/city" />

    <TextView
        android:id="@+id/package_resume_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/package_resume_city_name"
        app:layout_constraintTop_toBottomOf="@id/package_resume_city_name"
        tools:text="@sample/packages.json/packages/days" />

    <TextView
        android:id="@+id/package_resume_text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/final_price"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/package_resume_days"
        app:layout_constraintBottom_toTopOf="@id/package_resume_date"
        app:layout_constraintEnd_toEndOf="@id/package_resume_city_image"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/package_resume_days"
        app:layout_constraintTop_toTopOf="@id/package_resume_days"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/package_resume_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/package_resume_payment_price"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/package_resume_days"
        app:layout_constraintTop_toBottomOf="@id/package_resume_days"
        tools:text="08/12 - 10/12 of 2021" />

    <TextView
        android:id="@+id/package_resume_payment_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/package_resume_date"
        app:layout_constraintBottom_toBottomOf="@id/package_resume_date"
        app:layout_constraintEnd_toEndOf="@id/package_resume_text_price"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/package_resume_date"
        app:layout_constraintTop_toBottomOf="@id/package_resume_text_price"
        app:layout_constraintVertical_bias="1"
        tools:text="@sample/packages.json/packages/price" />


    <Button
        android:id="@+id/package_resume_make_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/shape_button_orange"
        android:hapticFeedbackEnabled="false"
        android:text="@string/make_payment"
        app:backgroundTint="@color/orange_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/package_resume_city_image"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>